<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="br.edu.ibta.aluno.conversor2.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="btnComprimento"
        android:text="@string/main_btnComprimento_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="btnMassa"
        android:text="@string/main_btnMassa_text" />

        <!--><Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="btnTemperatura"
        android:text="@string/main_btnTemperatura_text" /><!/-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="btnCFK"
        android:text="@string/CFK" />

</LinearLayout>